# Ams-147

./: README.md
Arom_Degraca_Homework2/: Newton_method.m  test_zero.m
ams147-project/: .gitignore  CMakeLists.txt  bind-clean.sh  bind.sh  build-example.sh  clean-example.sh  confirm.cc  octave-swig-ref  octave-workspace  run
ams147-project/example-swig/: .cpp  bind.sh  example.h  example.i
ams147-project/include/net/: Net.h  Neuron.h  TrainingData.h  common.hh  net.hh  neuron.hh  swig_lib.hh  training_data.hh
ams147-project/logic-gates/: CMakeLists.txt  main.cpp  train.cc
ams147-project/logic-gates/data/: resultsOrTraining.txt
ams147-project/octave-scripts/: and_model.m  jpg.ps  logical_and.m  logical_nand.m  logical_nor.m  logical_or.m  logical_xor.m  model.m  nand_model.m  nor_model.m  or_model.m  png.ps  ternary.m  xor_model.m
ams147-project/octave-scripts/training-data/: resultsOrTesting.txt  resultsOrTraining.txt
ams147-project/src/: CMakeLists.txt  Net.cpp  Neuron.cpp  TrainingData.cpp  net.cc  neuron.cc  training_data.cc
ams147-project/swig/: CMakeLists.txt  mymod.cpp  mymod.i  net.i  zinhart.i
ams147-project/swig/octave/: CMakeLists.txt
ams147-project/training-data/: resultsOrTesting.txt
hw1/: compute_matrix_times_vector.m  hw1.cpp  hw1.h  hw1.i  hw1.oct  hw1_wrap.cpp  octave-workspace  pi_series.m
hw1_complete/: compute_Euclidean_norm.m  compute_factorial.m
hw2/: chord_method.m
hw3/: Lagrange_interp.m
